Bug 79320 - [SNA G33/31] Segfault with "xrandr --output VGA1 --scale 2x2"
Summary: [SNA G33/31] Segfault with "xrandr --output VGA1 --scale 2x2"
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-27 15:48 UTC by Matti Hämäläinen
Modified: 2014-05-27 19:20 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
gdm/xorg log (4.25 KB, text/plain)
2014-05-27 15:48 UTC, Matti Hämäläinen
no flags Details
gdb backtrace (2.83 KB, text/plain)
2014-05-27 15:54 UTC, Matti Hämäläinen
no flags Details

Description Matti Hämäläinen 2014-05-27 15:48:46 UTC
Created attachment 99959 [details]
gdm/xorg log

Attempting to scale output via xrandr causes xorg segfault:

$ xrandr --output VGA1 --scale 2x2

Attaching gdm/xorg log, and following translated addresses from the trace:

$ addr2line -e /usr/lib/xorg/modules/drivers/intel_drv.so 0xa883d 0xf0aab 0xfb11f 0x896c4 0x91c26 0x71d51 0x94886
/misc/packages/xf86-video-intel/src/sna/sna_render.c:795
/misc/packages/xf86-video-intel/src/sna/gen3_render.c:3125
/misc/packages/xf86-video-intel/src/sna/gen3_render.c:3530
/misc/packages/xf86-video-intel/src/sna/sna_display.c:5311
/misc/packages/xf86-video-intel/src/sna/sna_display.c:5600
/misc/packages/xf86-video-intel/src/sna/sna_accel.c:16849
/misc/packages/xf86-video-intel/src/sna/sna_driver.c:661


-- Window manager: WindowMaker 0.95.5
-- chipset: 00:02.0 VGA compatible controller: Intel Corporation 82G33/G31
Express Integrated Graphics Controller (rev 10)
-- system architecture: i686 / 32bit
-- xf86-video-intel: GIT 605fcd9050efc816ac8163e8d626f466d98261c2
-- xserver: X.Org X Server 1.15.1-1 from latest Debian testing
-- mesa: 10.1.2-1 from Debian testing
-- libpixman: 0.32.4-1
-- libdrm version: 2.4.54-1
-- kernel version: 3.14.4 (vanilla+grsec)
-- Linux distribution: current Debian Testing
-- Machine or mobo model: Asus P5KPL-CM
-- Display connector: VGA
Comment 1 Matti Hämäläinen 2014-05-27 15:54:28 UTC
Created attachment 99962 [details]
gdb backtrace

Maybe this has some use too...
Comment 2 Chris Wilson 2014-05-27 19:20:37 UTC
commit 916354164bcb149e1323a3219d85e7bba6e61e04
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue May 27 20:16:55 2014 +0100

    sna: Fix the depth/format on the temporary shadow Pictures
    
    When scaling the output, we re-render onto the scanout using a call to
    Composite, for which we create temporary Pictures. In most cases, the
    mismatching depth/format goes unnoticed, but along one particular
    fallback path, we use those to create a new Picture but the mismatching
    format results in a segfault.
    
    Reported-by: Matti Hämäläinen <ccr@tnsp.org>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=79320
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

commit d8360bd74f5b62a27c019c65ed9001cac8bf43ed
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue May 27 20:14:02 2014 +0100

    sna: Handle bad picture format/depth mismatches
    
    Scaling the output feed in an invalid picture->format/depth combination
    which causes the fallback downsampling function to explode. Whilst this
    is a bug in the higher layer, we can handle the error anyway.
    
    References: https://bugs.freedesktop.org/show_bug.cgi?id=79320
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.